--- a/views/index.html
+++ b/views/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" type="text/css" href="../public/css/style.css" />
   </head>
   <body>
-    <form action="/views/card.html">
+    <form>
       <div class="title">
         <h1><strong>L</strong>ogin</h1>
       </div>
